--- a/1/pg_1/mypage/index.html
+++ b/1/pg_1/mypage/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -56,10 +56,7 @@
       </div>
       <div class="tile tile3">
         <video autoplay controls loop muted poster="aaa" preload="bbb">
-          <source
-            src="./dazzi/KakaoTalk_20220810_163434448.mp4"
-            type="video/mp4"
-          />
+          <source src="./dazzi/KakaoTalk_20220810_163434448.mp4" type="video/mp4" />
         </video>
       </div>
       <div class="tile tile4">
@@ -73,10 +70,7 @@
       </div>
       <div class="tile tile7">
         <video autoplay controls loop muted poster="aaa" preload="bbb">
-          <source
-            src="./dazzi/KakaoTalk_20220812_145225657.mp4"
-            type="video/mp4"
-          />
+          <source src="./dazzi/KakaoTalk_20220812_145225657.mp4" type="video/mp4" />
         </video>
       </div>
       <div class="tile tile8">
