--- a/Min/random.html
+++ b/Min/random.html
@@ -1,86 +1,85 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Find your planet</title>
 
     <!-- FONT AWESOME -->
     <script src="https://kit.fontawesome.com/9fca17e4f2.js" crossorigin="anonymous"></script>
 
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     <!-- JS -->
     <script defer src="./random.js"></script>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="./random.css">
-
-</head>
-<body>
+    <link rel="stylesheet" href="./random.css" />
+  </head>
+  <body>
     <section class="random_page">
-        <div class="scroll">
-            <p>Scroll down</p>
-            <i class="fa-solid fa-angles-down"></i>
-        </div>
-        <div data-aos="fade-right" id="find"><p>Find</p></div>
-        <div data-aos="fade-left" id="your"><p>Your</p></div>
-        <div data-aos="fade-right" id="planet"><p>Planet</p></div>
+      <div class="scroll">
+        <p>Scroll down</p>
+        <i class="fa-solid fa-angles-down"></i>
+      </div>
+      <div data-aos="fade-right" id="find"><p>Find</p></div>
+      <div data-aos="fade-left" id="your"><p>Your</p></div>
+      <div data-aos="fade-right" id="planet"><p>Planet</p></div>
 
-        <div class="find_your_planet">
-            <span>Click to<br>Find Your Planet</span>
+      <div class="find_your_planet">
+        <span>Click to<br />Find Your Planet</span>
+      </div>
+
+      <div id="container">
+        <div id="inner_container">
+          <span class="loading"><i class="fa-solid fa-spinner"></i></span>
+          <img id="image_shower" />
         </div>
 
-
-        <div id ="container">
-            <div id="inner_container">
-                <span class="loading"><i class="fa-solid fa-spinner"></i></span>
-                <img id="image_shower"/>
-            </div>
-    
-            <div id="button_container">
-                <button class="main_btn" onclick="get_random_image()">click</button>
-                <button class="restart_btn">restart</button>
-            </div>
+        <div id="button_container">
+          <button class="main_btn" onclick="get_random_image()">click</button>
+          <button class="restart_btn">restart</button>
         </div>
+      </div>
     </section>
 
     <footer>
-        <div class="footer_inner">
-
-            <div class="register">
-                <p>Show your stories</p>
-                <div class="register_btn">
-                    <span>upload your story 
-                    <a href=""><i class="fa-solid fa-upload"></i></a>
-                </span>
-                </div>
-            </div>
-
-            <div class="share">
-                <p>Share with your friends</p>
-                <div class="share_icons">
-                    <a href=""><i class="fa-solid fa-share-nodes"></i></a>
-                    <a href=""><i class="fa-brands fa-instagram"></i></a>
-                    <a href=""><i class="fa-brands fa-facebook"></i></a>
-                    <a href=""><i class="fa-brands fa-square-twitter"></i></a>
-                </div>    
-            </div>
-
-            <div class="save">
-                <p>Save your results</p>
-                <div class="save_icons">
-                    <a href=""><i class="fa-solid fa-floppy-disk"></i></a>
-                </div>
-            </div>
-
-            <div class="team_member">
-                <a href="../Hoon/member.html" target="_blank"><p>Click to see<br>Our Members</p></a>
-            </div>
-
+      <div class="footer_inner">
+        <div class="register">
+          <p>Show your stories</p>
+          <div class="register_btn">
+            <span
+              >upload your story
+              <a href=""><i class="fa-solid fa-upload"></i></a>
+            </span>
+          </div>
         </div>
+
+        <div class="share">
+          <p>Share with your friends</p>
+          <div class="share_icons">
+            <a href=""><i class="fa-solid fa-share-nodes"></i></a>
+            <a href=""><i class="fa-brands fa-instagram"></i></a>
+            <a href=""><i class="fa-brands fa-facebook"></i></a>
+            <a href=""><i class="fa-brands fa-square-twitter"></i></a>
+          </div>
+        </div>
+
+        <div class="save">
+          <p>Save your results</p>
+          <div class="save_icons">
+            <a href=""><i class="fa-solid fa-floppy-disk"></i></a>
+          </div>
+        </div>
+
+        <div class="team_member">
+          <a href="../Hoon/member.html" target="_blank"
+            ><p>Click to see<br />Our Members</p></a
+          >
+        </div>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
